examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__while_statements@while a  b  c.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            WhileStatement(
                WhileStatement {
                    alternative: None,
                    body: Block {
                        alternative: [],
                        children: [
                            SimpleStatement(
                                ExpressionStatement(
                                    ExpressionStatement {
                                        children: [
                                            Expression(
                                                PrimaryExpression(
                                                    Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                            SimpleStatement(
                                ExpressionStatement(
                                    ExpressionStatement {
                                        children: [
                                            Expression(
                                                PrimaryExpression(
                                                    Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    condition: PrimaryExpression(
                        Identifier(
                            Identifier {
                                [RANGE]
                            },
                        ),
                    ),
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
