examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__while_statements@while c:  delse:  e  f.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            WhileStatement(
                WhileStatement {
                    alternative: Some(
                        ElseClause {
                            body: Block {
                                alternative: [],
                                children: [
                                    SimpleStatement(
                                        ExpressionStatement(
                                            ExpressionStatement {
                                                children: [
                                                    Expression(
                                                        PrimaryExpression(
                                                            Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                    SimpleStatement(
                                        ExpressionStatement(
                                            ExpressionStatement {
                                                children: [
                                                    Expression(
                                                        PrimaryExpression(
                                                            Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                ],
                                [RANGE]
                            },
                            [RANGE]
                        },
                    ),
                    body: Block {
                        alternative: [],
                        children: [
                            SimpleStatement(
                                ExpressionStatement(
                                    ExpressionStatement {
                                        children: [
                                            Expression(
                                                PrimaryExpression(
                                                    Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    condition: PrimaryExpression(
                        Identifier(
                            Identifier {
                                [RANGE]
                            },
                        ),
                    ),
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
